# stm32g0xx-hal

./: .gdbinit  Cargo.toml  LICENSE-MIT  README.md  memory.x  openocd.cfg
.cargo/: config  config.toml
.github/workflows/: ci.yml  clippy.yml  rustfmt.yml
.zed/: settings.json
examples/: adc.rs  adc_ext_trig_double_dma_serial.rs  aes.rs  blinky.rs  blinky_delay.rs  blinky_random.rs  blinky_timer.rs  button.rs  clockout.rs  color-sensor.rs  color_sensor.rs  comp.rs  comp_window.rs  crc.rs  dac.rs  flash.rs  hello.rs  i2c.rs  ir_remote.rs  opm.rs  pwm.rs  qei.rs  rtfm.rs  rtic.rs  rtic_low_power.rs  sdcard.rs  spi.rs  st7735-lcd.rs  st7735_lcd.rs  stopwatch.rs  uart-dma.rs  uart-fifo.rs  uart-rs485.rs  uart.rs  uart_fifo.rs  uart_rs485.rs  watchdog.rs  ws2812-spi.rs  ws2812_spi.rs
src/: adc.rs  aes.rs  comparator.rs  crc.rs  dac.rs  debug.rs  delay.rs  dma.rs  dmamux.rs  exti.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  opm.rs  power.rs  prelude.rs  pwm.rs  qei.rs  rcc.rs  rng.rs  rtc.rs  serial.rs  spi.rs  stopwatch.rs  time.rs  timer.rs  watchdog.rs
src/analog/: adc.rs  comparator.rs  dac.rs  mod.rs
src/flash/: mod.rs  traits.rs
src/i2c/: blocking.rs  config.rs  mod.rs  nonblocking.rs
src/rcc/: clockout.rs  config.rs  enable.rs  mod.rs
src/serial/: config.rs  mod.rs  serial.rs  usart.rs
src/timer/: delay.rs  mod.rs  monotonics.rs  opm.rs  pins.rs  pwm.rs  qei.rs  stopwatch.rs
