[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G0 series microcontrollers"
documentation = "https://docs.rs/stm32g0xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32g0xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g0xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g0xx-hal"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["stm32g081", "rt"]
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
nb = "1.0.0"
fugit = "0.3.5"

[dependencies.stm32g0]
version = "0.14.0"
features = ["rt"]

[dependencies.bare-metal]
version = "1.0.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.6"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.3.5"
embedded-graphics = "0.5"
embedded-sdmmc = "0.2.1"
infrared =  "0.11.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
smart-leds = "0.3.0"
st7735-lcd = "0.6.1"
ws2812-spi = { version = "0.3.0", features = [] }

[features]
default = ["i2c-blocking"]
device-selected = []
rt = ["stm32g0/rt"]
stm32g030 = ["stm32g0/stm32g030", "stm32g0x0", "device-selected"]
stm32g070 = ["stm32g0/stm32g070", "stm32g0x0", "device-selected"]
stm32g031 = ["stm32g0/stm32g031", "stm32g0x1", "device-selected"]
stm32g041 = ["stm32g0/stm32g041", "stm32g0x1", "device-selected"]
stm32g071 = ["stm32g0/stm32g071", "stm32g0x1", "device-selected"]
stm32g081 = ["stm32g0/stm32g081", "stm32g0x1", "device-selected"]

stm32g0x0 = []
stm32g0x1 = []

i2c-blocking = []
i2c-nonblocking = []

[profile.dev]
incremental = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = false
