[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32G0 series microcontrollers"
documentation = "https://docs.rs/stm32g0xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32g0xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32g0xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32g0xx-hal"
version = "0.2.0"

[package.metadata.docs.rs]
features = ["stm32g081", "rt"]
default-target = "thumbv6m-none-eabi"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
nb = "1.1.0"
fugit = "0.3.7"
embedded-hal = "1.0.0"
bare-metal = "1.0.0"


[dependencies.stm32g0]
package = "stm32g0-staging"
version = "0.16.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
defmt = "0.3.8"
defmt-rtt = "0.4.0"
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"
portable-atomic = {version = "1.7.0", features = ["critical-section"]}
rtic = { version = "2.1.1", features = ["thumbv6-backend"] }
panic-probe = "0.3.2"

[features]
default = ["i2c-blocking"]
device-selected = []
rt = ["stm32g0/rt"]
defmt = ["embedded-hal/defmt-03"]
stm32g030 = ["stm32g0/stm32g030", "stm32g0x0", "device-selected"]
stm32g070 = ["stm32g0/stm32g070", "stm32g0x0", "device-selected"]
stm32g031 = ["stm32g0/stm32g031", "stm32g0x1", "device-selected"]
stm32g041 = ["stm32g0/stm32g041", "stm32g0x1", "device-selected"]
stm32g071 = ["stm32g0/stm32g071", "stm32g0x1", "device-selected"]
stm32g081 = ["stm32g0/stm32g081", "stm32g0x1", "device-selected"]
stm32g0b1 = ["stm32g0/stm32g0b1", "stm32g0x1", "device-selected"]
stm32g0c1 = ["stm32g0/stm32g0c1", "stm32g0x1", "device-selected"]

stm32g0x0 = []
stm32g0x1 = []

i2c-blocking = []
i2c-nonblocking = []

[profile.dev]
incremental = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = false
